2005-06-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-30  Roman Kennke  <roman@kennke.org>

	* javax/swing/JLayeredPane.java
	(putLayer): Implemented new method.

	2005-05-30  Roman Kennke  <roman@kennke.org>

	* javax/swing/JFileChooser.java:
	Fixed values of some constant fields.

	2005-05-30  Roman Kennke  <roman@kennke.org>

	* javax/swing/SwingUtilities.java:
	(getWindowAncestor): This method has to be static instead of
	non-static.
	
2005-06-10  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-29  Michael Koch  <konqueror@gmx.de>

	* java/util/LinkedHashMap.java (access): Set 'root.pred'.

2005-06-09  Helmer Kraemer  <hkraemer@freenet.de>

	* kaffe/kaffevm/classMethod.c (expandMethods): create new parsed_signature_t for
	created method
	(duplicateParsedSignature): new method

	Fixes bug reported by Daniel Bonniot <Daniel.Bonniot@inria.fr>

2005-06-05  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/javalib/gnu/java/nio/charset/iconv/IconvProvider.java
	(IconvProvider): Made the constructor public.

	* libraries/javalib/java/nio/charset/Charset.java
	(providers2): Allow spaces and comments in
	META-INF/services/java.nio.charset.spi.CharsetProvider.
	Load the provider using the context class loader.

2005-06-04  Helmer Kraemer  <hkraemer@freenet.de>

	* kaffe/kaffevm/jni/jni.c (Kaffe_FindClass): fixed so it works correctly	for native methods of system classes.

2005-06-02  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/jni/jni.c
	(Kaffe_ExceptionDescribe): Fixed variable declaration.

	* test/regression/ProcessClassInst.java,
	test/regression/ProcessClassStop.java: Checked in missing files.

2005-06-01  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/stackTrace.c
	(printStackTrace): Reformatted trace output.

	* kaffe/kaffevm/support.c
	(kprintf): Use vfprintf stored in kaffe VM arguments.

	* kaffe/kaffevm/jni/jni.c
	(Kaffe_ExceptionDescribe): Always print the stack trace using